samples/_failures_safe/1761474223_576bda_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_50df1c8f.c: In function ‘matrix_determinant’:
./samples/SAFE/__tmp_50df1c8f.c:127:9: error: expected expression at end of input
  127 |         double sign = (
      |         ^~~~~~
./samples/SAFE/__tmp_50df1c8f.c:127:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_50df1c8f.c:127:9: error: expected declaration or statement at end of input
